Fixed bleeding image

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -39,12 +39,6 @@ body{
   padding: 0 30px;
 }
 
-.hero {
-  width: 100vw;
-  height: 100vh;
-}
-
 .hero img {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
 }
